Bug 1475836: Clear cached callback pref when deleting branch. r=njn

MozReview-Commit-ID: C60kGkoFBL8